--- a/GarbageClassification-GitCopy.ipynb
+++ b/GarbageClassification-GitCopy.ipynb
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f9328f5c",
+   "id": "24d331cb",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "4a71b782",
+   "id": "4d6a9a59",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "1325e10f",
+   "id": "32ec5d2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c0e92dbb",
+   "id": "247e9044",
    "metadata": {},
    "outputs": [
     {
@@ -1261,6 +1261,229 @@
    ],
    "source": [
     "print(classification_report(labels, cat_preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "74996a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1-score</th>\n",
+       "      <th>support</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>battery</th>\n",
+       "      <td>0.891089</td>\n",
+       "      <td>0.957447</td>\n",
+       "      <td>0.923077</td>\n",
+       "      <td>94.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>biological</th>\n",
+       "      <td>0.949495</td>\n",
+       "      <td>0.959184</td>\n",
+       "      <td>0.954315</td>\n",
+       "      <td>98.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cardboard</th>\n",
+       "      <td>0.945055</td>\n",
+       "      <td>0.966292</td>\n",
+       "      <td>0.955556</td>\n",
+       "      <td>89.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>clothes</th>\n",
+       "      <td>0.994286</td>\n",
+       "      <td>0.979362</td>\n",
+       "      <td>0.986767</td>\n",
+       "      <td>533.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>green-glass</th>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.920635</td>\n",
+       "      <td>0.943089</td>\n",
+       "      <td>63.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>metal</th>\n",
+       "      <td>0.846154</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.851613</td>\n",
+       "      <td>77.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>paper</th>\n",
+       "      <td>0.930000</td>\n",
+       "      <td>0.885714</td>\n",
+       "      <td>0.907317</td>\n",
+       "      <td>105.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>plastic</th>\n",
+       "      <td>0.897436</td>\n",
+       "      <td>0.804598</td>\n",
+       "      <td>0.848485</td>\n",
+       "      <td>87.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shoes</th>\n",
+       "      <td>0.940000</td>\n",
+       "      <td>0.949495</td>\n",
+       "      <td>0.944724</td>\n",
+       "      <td>198.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>trash</th>\n",
+       "      <td>0.942857</td>\n",
+       "      <td>0.942857</td>\n",
+       "      <td>0.942857</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>white-glass</th>\n",
+       "      <td>0.808989</td>\n",
+       "      <td>0.935065</td>\n",
+       "      <td>0.867470</td>\n",
+       "      <td>77.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td>0.942321</td>\n",
+       "      <td>0.942321</td>\n",
+       "      <td>0.942321</td>\n",
+       "      <td>0.942321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>macro avg</th>\n",
+       "      <td>0.919275</td>\n",
+       "      <td>0.923436</td>\n",
+       "      <td>0.920479</td>\n",
+       "      <td>1491.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>weighted avg</th>\n",
+       "      <td>0.943709</td>\n",
+       "      <td>0.942321</td>\n",
+       "      <td>0.942461</td>\n",
+       "      <td>1491.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              precision    recall  f1-score      support\n",
+       "battery        0.891089  0.957447  0.923077    94.000000\n",
+       "biological     0.949495  0.959184  0.954315    98.000000\n",
+       "cardboard      0.945055  0.966292  0.955556    89.000000\n",
+       "clothes        0.994286  0.979362  0.986767   533.000000\n",
+       "green-glass    0.966667  0.920635  0.943089    63.000000\n",
+       "metal          0.846154  0.857143  0.851613    77.000000\n",
+       "paper          0.930000  0.885714  0.907317   105.000000\n",
+       "plastic        0.897436  0.804598  0.848485    87.000000\n",
+       "shoes          0.940000  0.949495  0.944724   198.000000\n",
+       "trash          0.942857  0.942857  0.942857    70.000000\n",
+       "white-glass    0.808989  0.935065  0.867470    77.000000\n",
+       "accuracy       0.942321  0.942321  0.942321     0.942321\n",
+       "macro avg      0.919275  0.923436  0.920479  1491.000000\n",
+       "weighted avg   0.943709  0.942321  0.942461  1491.000000"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Converting the report into a DataFrame\n",
+    "output_dict = classification_report(labels, cat_preds, output_dict=True)\n",
+    "output_results_df = pd.DataFrame(output_dict).transpose()\n",
+    "output_results_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "1eba528b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Analyze the precision relative to the overarching waste categories of trash, recycling, and compost \n",
+    "waste_stats = []\n",
+    "recycling_stats = []\n",
+    "compost_stats = []\n",
+    "for category in list(output_results_df.index): \n",
+    "    if category in waste: \n",
+    "        waste_stats.append(output_results_df.loc[category, 'precision'])\n",
+    "    elif category in recycling: \n",
+    "        recycling_stats.append(output_results_df.loc[category, 'precision'])\n",
+    "    else: \n",
+    "        compost_stats.append(output_results_df.loc[category, 'precision'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "5f467686",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waste Avg:  0.9239812327942265\n",
+      "Recycling Avg:  0.9046611721611721\n",
+      "Compost Avg:  0.9386999047105344\n"
+     ]
+    }
+   ],
+   "source": [
+    "waste_avg = np.array(waste_stats).mean()\n",
+    "print(\"Waste Avg: \", waste_avg)\n",
+    "recycling_avg = np.array(recycling_stats).mean()\n",
+    "print(\"Recycling Avg: \", recycling_avg)\n",
+    "compost_avg = np.array(compost_stats).mean()\n",
+    "print(\"Compost Avg: \", compost_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1581250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Next iteration: \n",
+    "    # Try implementing Batch Normalization \n",
+    "    # Further optimize the learning rate when unfreezing the imported weights "
    ]
   }
  ],
