--- a/GarbageClassification-GitCopy.ipynb
+++ b/GarbageClassification-GitCopy.ipynb
@@ -925,7 +925,6 @@
     "batch_size = 64\n",
     "train_datagen = image.ImageDataGenerator(\n",
     "#     rescale=1./255.,\n",
-    "    rotation_range=30,\n",
     "    horizontal_flip=True,\n",
     "    vertical_flip = True,\n",
     ")\n",
@@ -1078,8 +1077,7 @@
     "for layer in xception_layer.layers:\n",
     "    layer.trainable = True\n",
     "\n",
-    "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['categorical_accuracy'])\n",
-    "# tf.keras.optimizers.Adam(learning_rate=0.0007)\n",
+    "model.compile(loss='categorical_crossentropy', optimizer=tf.keras.optimizers.Adam(learning_rate=0.0007), metrics=['categorical_accuracy'])\n",
     "\n",
     "model.summary()"
    ]
@@ -1177,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "24d331cb",
+   "id": "ce274b0c",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "4d6a9a59",
+   "id": "5b5ab2b5",
    "metadata": {},
    "outputs": [
     {
@@ -1218,12 +1216,14 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "32ec5d2a",
+   "id": "70532baa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert category number to corresponding category name\n",
-    "models_labels = dict((num, category) for category, num in train_generator.class_indices.items())\n",
+    "models_labels = {}\n",
+    "for item in test_generator.class_indices.items(): \n",
+    "    models_labels[item[1]] = item[0]\n",
     "cat_preds = [models_labels[pred] for pred in preds]\n",
     "labels = test_df['category'].to_numpy()"
    ]
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "247e9044",
+   "id": "c79e1ee1",
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "74996a06",
+   "id": "0116b0fb",
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "1eba528b",
+   "id": "2304ab04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1452,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "5f467686",
+   "id": "65a98a16",
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1581250",
+   "id": "ede7f98c",
    "metadata": {},
    "outputs": [],
    "source": [
