--- a/GarbageClassification-GitCopy.ipynb
+++ b/GarbageClassification-GitCopy.ipynb
@@ -788,34 +788,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "f4a31f30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Becuase Pixel range in Images are between [0,255], To rescale an input in the [0, 255] range\n",
-    "# to be in the [0, 1] range, you would pass scale=1./255\n",
-    "resize_rescale_layer = tf.keras.Sequential([\n",
-    "            tf.keras.layers.experimental.preprocessing.Resizing(IMAGE_WIDTH, IMAGE_HEIGHT),\n",
-    "            tf.keras.layers.experimental.preprocessing.Rescaling(1./255)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "fa2da14f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_augmentation_layer = tf.keras.Sequential([\n",
-    "                            tf.keras.layers.experimental.preprocessing.RandomFlip(\"horizontal_and_vertical\"),\n",
-    "                            tf.keras.layers.experimental.preprocessing.RandomRotation((-0.2, 0.3))\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
    "id": "78d76d4c",
    "metadata": {},
@@ -860,8 +832,14 @@
     "# Preprocessing\n",
     "def xception_layer_preprocessing(img):\n",
     "  return xception.preprocess_input(img)\n",
-    "# model.add(resize_rescale_layer)\n",
-    "# model.add(image_augmentation_layer)\n",
+    "# model.add(tf.keras.Sequential([\n",
+    "#             tf.keras.layers.experimental.preprocessing.Resizing(IMAGE_WIDTH, IMAGE_HEIGHT),\n",
+    "#             tf.keras.layers.experimental.preprocessing.Rescaling(1./255)\n",
+    "# ]))\n",
+    "# model.add(tf.keras.Sequential([\n",
+    "#                             tf.keras.layers.experimental.preprocessing.RandomFlip(\"horizontal_and_vertical\"),\n",
+    "#                             tf.keras.layers.experimental.preprocessing.RandomRotation((-0.4, 0.4))\n",
+    "# ]))\n",
     "model.add(Lambda(xception_layer_preprocessing))\n",
     "\n",
     "model.add(xception_layer)\n",
@@ -873,7 +851,7 @@
     "\n",
     "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['categorical_accuracy'])\n",
     "\n",
-    "model.summary()\n"
+    "model.summary()"
    ]
   },
   {
@@ -899,12 +877,7 @@
     "\n",
     "# Split the data into two sets and then split the validate_df to two sets\n",
     "train_df, validate_df = train_test_split(file_category_df, stratify=file_category_df['category'], test_size=0.2)\n",
-    "validate_df, test_df = train_test_split(validate_df, stratify=validate_df['category'],test_size=0.5)\n",
-    "\n",
-    "# Reset the indices for all the different data sets \n",
-    "train_df = train_df.reset_index(drop=True)\n",
-    "validate_df = validate_df.reset_index(drop=True)\n",
-    "test_df = test_df.reset_index(drop=True)"
+    "validate_df, test_df = train_test_split(validate_df, stratify=validate_df['category'],test_size=0.5)"
    ]
   },
   {
@@ -923,6 +896,7 @@
    ],
    "source": [
     "batch_size = 64\n",
+    "train_df = train_df.reset_index(drop=True)\n",
     "train_datagen = image.ImageDataGenerator(\n",
     "#     rescale=1./255.,\n",
     "    horizontal_flip=True,\n",
@@ -934,7 +908,6 @@
     "    base_path, \n",
     "    x_col='filename',\n",
     "    y_col='category',\n",
-    "    class_mode='categorical',\n",
     "    target_size=IMAGE_SIZE,\n",
     "    batch_size=batch_size\n",
     ")"
@@ -956,13 +929,12 @@
    ],
    "source": [
     "validation_datagen = image.ImageDataGenerator()\n",
-    "\n",
+    "validate_df = validate_df.reset_index(drop=True)\n",
     "validation_generator = validation_datagen.flow_from_dataframe(\n",
     "    validate_df, \n",
     "    base_path, \n",
     "    x_col='filename',\n",
     "    y_col='category',\n",
-    "    class_mode='categorical',\n",
     "    target_size=IMAGE_SIZE,\n",
     "    batch_size=batch_size\n",
     ")"
@@ -984,15 +956,13 @@
    ],
    "source": [
     "test_datagen = image.ImageDataGenerator()\n",
-    "\n",
+    "test_df = test_df.reset_index(drop=True)\n",
     "test_generator = test_datagen.flow_from_dataframe(\n",
     "    dataframe= test_df,\n",
     "    directory=base_path,\n",
     "    x_col='filename',\n",
     "    y_col='category',\n",
-    "    class_mode='categorical',\n",
     "    target_size=IMAGE_SIZE,\n",
-    "    color_mode=\"rgb\",\n",
     "    batch_size=1,\n",
     "    shuffle=False \n",
     ")"
@@ -1141,6 +1111,8 @@
     "# Plotting loss\n",
     "plt.plot(model_data.history['loss'], label=\"Training loss\")\n",
     "plt.plot(model_data.history['val_loss'], label=\"Val Loss\")\n",
+    "# plt.xlabel(\"Epochs\")\n",
+    "# plt.ylabel(\"Loss\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1168,6 +1140,8 @@
     "# Plotting accuracy \n",
     "plt.plot(model_data.history['categorical_accuracy'], label=\"Training accuracy\")\n",
     "plt.plot(model_data.history['val_categorical_accuracy'], label=\"Val accuracy\")\n",
+    "# plt.xlabel(\"Epochs\")\n",
+    "# plt.ylabel(\"Accuracy\")\n",
     "plt.legend()\n",
     "plt.show()"
    ]
@@ -1175,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "ce274b0c",
+   "id": "f594337c",
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "5b5ab2b5",
+   "id": "d6c176f2",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "70532baa",
+   "id": "55e66aa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c79e1ee1",
+   "id": "6bf14e03",
    "metadata": {},
    "outputs": [
     {
@@ -1266,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0116b0fb",
+   "id": "61c0d111",
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "2304ab04",
+   "id": "fcd5b1b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "65a98a16",
+   "id": "22ecc139",
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ede7f98c",
+   "id": "e107a632",
    "metadata": {},
    "outputs": [],
    "source": [
